# D3D12-Experimental

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  D3D12-Experimental.sln  LICENSE  README.md  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-16b97ec695a27fc025bd.json  cmakeFiles-v1-000e58ccffc019446be1.json  cmakeFiles-v1-b30ce3f637eb45c8f8ab.json  codemodel-v2-f6cea5ddcb38c9e645fe.json  codemodel-v2-f89ebee130d9cf9962c8.json  directory-Graphics-MinSizeRel-26b3e5ef93a877e40f98.json  directory-Sample.Framework-RelWithDebInfo-0c908ad3205e967f1c1d.json  index-2024-03-19T07-50-43-0030.json  index-2024-03-19T08-22-19-0267.json  target-ALL_BUILD-Debug-1c60ecbccb331309b7e3.json  target-ALL_BUILD-MinSizeRel-b8872c103c2062cb1645.json  target-ConstBuffer-Debug-576ec86a7b7a80485cf1.json  target-ConstBuffer-MinSizeRel-ec66e4f28e4015d34798.json  target-ConstBuffer-RelWithDebInfo-8022bb1cd6fb6b49a533.json  target-ConstBuffer-Release-a6ad72daba0b7d592a8d.json  target-Framework-Debug-687b5fed41e3d747b7e7.json  target-Framework-MinSizeRel-da487169acb3be323219.json  target-Framework-RelWithDebInfo-b56a3a0d2be347635714.json  target-Framework-Release-cfab44e1d114fdf8a445.json  target-Graphics-Debug-370838436e88721b7abc.json  (+3 more)
Graphics/: CMakeLists.txt  DXConfig.h  DXContext.cpp  DXContext.h  Graphics.vcxproj  Graphics.vcxproj.filters  cmake_install.cmake
Sample/Framework/: CMakeLists.txt  ConstBuffer.vcxproj  ConstBuffer.vcxproj.filters  Framework.vcxproj  cmake_install.cmake  constbuffer.hlsl  main.cpp
lib/: Graphics.lib
